--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@
 
 #background {
     background: url('http://i.stack.imgur.com/GySvQ.png');
+    /* background: url('http://i.stack.imgur.com/GySvQ.png'); */
     /* background: url('http://github.com/BEugeneSmith/BEugeneSmith.github.io/blob/master/updated_window.png'); */
 }
 
