--- a/style.css
+++ b/style.css
@@ -26,6 +26,17 @@
     background: url('http://i.stack.imgur.com/GySvQ.png');
 }
 
+.body-wrapper {
+  font-weight: 600;
+  /* margin: 40px; */
+  margin-bottom: 0;
+  font-family: "Avenir-Book", "Helvetica Neue", sans-serif;
+  display: grid;
+  width: 700px;
+  grid-template-rows: 230px 1fr 1fr;
+  /* grid-gap: 20px; */
+}
+
 body {
     padding: 70px;
     font: 14px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -39,6 +50,7 @@ body {
     max-width: fit-content;
     text-overflow: clip;
     overflow: hidden;
+    display: flex;
     white-space: nowrap;
     background-color: #ffffff;
 }
