--- a/style.css
+++ b/style.css
@@ -1,28 +1,4 @@
-@font-face {
-    font-family: 'Helvetica', monospace;
-    font-weight: 400;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Helvetica', monospace;
-    font-weight: 700;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Helvetica', monospace;
-    font-weight: 400;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'Helvetica', monospace;
-    font-weight: 700;
-    font-style: italic;
-}
-
-#background {
+background {
     background: url('http://i.stack.imgur.com/GySvQ.png');
 }
 
@@ -33,7 +9,7 @@
   font-family: "Avenir-Book", "Helvetica Neue", sans-serif;
   display: grid;
   width: 700px;
-  grid-template-rows: 230px 1fr 1fr;
+  /* grid-template-rows: 230px 1fr 1fr; */
   /* grid-gap: 20px; */
 }
 
