--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-background {
+#background {
     background: url('http://i.stack.imgur.com/GySvQ.png');
 }
 
@@ -9,7 +9,7 @@ background {
   font-family: "Avenir-Book", "Helvetica Neue", sans-serif;
   display: grid;
   width: 700px;
-  /* grid-template-rows: 230px 1fr 1fr; */
+  grid-template-rows: 230px 1fr 1fr;
   /* grid-gap: 20px; */
 }
 
